search engine friendly, favicon and analytics

--- a/private/settings.example.json
+++ b/private/settings.example.json
@@ -2,5 +2,9 @@
   "github": {
     "clientId": "62767c86bac4d36dfb20",
     "secret": "2456edfd18d42ad68dae656277ee91d8176ee5b6"
+  },
+  "kadira": {
+    "appId": "LjtMNyS6RKsefGQ8z",
+    "appSecret": "04375ac6-cd43-4fc0-874e-a8c78b76d0ab"
   }
 }
