--- a/private/settings.example.json
+++ b/private/settings.example.json
@@ -6,5 +6,8 @@
   "kadira": {
     "appId": "LjtMNyS6RKsefGQ8z",
     "appSecret": "04375ac6-cd43-4fc0-874e-a8c78b76d0ab"
+  },
+  "PrerenderIO": {
+    "token": "YAk1AIdU82odDfrzF1h9"
   }
 }
