--- a/bower.json
+++ b/bower.json
@@ -7,11 +7,13 @@
     "sweetalert": "1.1.3",
     "codemirror": "5.11.0",
     "highlightjs": "9.1.0",
-    "spinkit": "1.2.5"
+    "spinkit": "1.2.5",
+    "speakingurl": "8.0.2"
   },
   "overrides": {
     "milligram": { "arch": ["client"] },
     "marked": { "arch": ["client", "server"] },
+    "speakingurl": { "arch": ["client", "server"] },
     "sweetalert": { "arch": ["client"] },
     "spinkit": { "arch": ["client"] },
     "codemirror": {
