--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,6 @@
 {
   "name": "kodepot",
   "dependencies": {
-    "milligram": "1.0.3",
     "marked": "0.3.5",
     "jsdiff": "2.2.1",
     "sweetalert": "1.1.3",
@@ -11,7 +10,6 @@
     "speakingurl": "8.0.2"
   },
   "overrides": {
-    "milligram": { "arch": ["client"] },
     "marked": { "arch": ["client", "server"] },
     "speakingurl": { "arch": ["client", "server"] },
     "sweetalert": { "arch": ["client"] },
@@ -19,7 +17,14 @@
     "codemirror": {
       "main": [
         "lib/codemirror.js",
+	"addon/fold/foldcode.js",
+	"addon/fold/foldgutter.js",
+	"addon/fold/brace-fold.js",
+	"addon/fold/xml-fold.js",
+	"addon/fold/markdown-fold.js",
+	"addon/fold/comment-fold.js",
         "addon/mode/overlay.js",
+	"addon/display/placeholder.js",
         "mode/xml/xml.js",
         "mode/markdown/markdown.js",
         "mode/gfm/gfm.js",
@@ -30,7 +35,8 @@
         "mode/ruby/ruby.js",
         "mode/go/go.js",
         "lib/codemirror.css",
-        "theme/paraiso-dark.css"
+	"addon/fold/foldgutter.css",
+        "theme/elegant.css"
       ],
       "arch": ["client"]
     },
