--- a/bower.json
+++ b/bower.json
@@ -2,16 +2,14 @@
   "name": "kodepot",
   "dependencies": {
     "marked": "0.3.5",
-    "jsdiff": "2.2.1",
-    "sweetalert": "1.1.3",
     "codemirror": "5.11.0",
     "highlightjs": "9.1.0",
+    "sweetalert": "1.1.3",
     "spinkit": "1.2.5",
-    "speakingurl": "8.0.2"
+    "jsdiff": "2.2.1"
   },
   "overrides": {
     "marked": { "arch": ["client", "server"] },
-    "speakingurl": { "arch": ["client", "server"] },
     "sweetalert": { "arch": ["client"] },
     "spinkit": { "arch": ["client"] },
     "codemirror": {
