add google analytics

--- a/private/settings.example.json
+++ b/private/settings.example.json
@@ -9,5 +9,10 @@
   },
   "PrerenderIO": {
     "token": "YAk1AIdU82odDfrzF1h9"
+  },
+  "public": {
+    "ga": {
+      "id": "UA-47273210-1"
+    }
   }
 }
